[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkrelay-sdk"
version = "0.1.0"
description = "Python SDK for ArkRelay Gateway (sessions, ceremony, assets, and Nostr utilities)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ArkRelay", email = "dev@arkrelay.example" }]
dependencies = [
  "requests>=2.31.0",
  "coincurve>=18.0.0",
  "bech32>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/afeezaziz/arkrelay-gateway/tree/main/gateway/sdk"
Repository = "https://github.com/afeezaziz/arkrelay-gateway"
Issues = "https://github.com/afeezaziz/arkrelay-gateway/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]
